# py-sandbox

./: .bashrcalias  README.md  pyproject.toml
config/: test_yaml.yml
data/pesquisa_arquivos_sql/: diretorios.xlsx
data/test_openpyxl/: arquivo_openpyxl.xlsx
scripts/: configurar_path.py  configurar_script.py  consulta_medicamentos.py  executa_comandos_bash.py  lib_pathlib.py  pesquisa_arquivos_sql.py  pesquisa_sql.py  py-email.py  test_openpyxl.py  test_pyodbc.py  test_pyspark.py  uninstall-import.py
src/: lib_pathlib.py  test_pyodbc.py  test_pyspark.py
utils/: config.py  utils.py
