[tool.poetry]
name = "py-sandbox"
version = "0.1.0"
description = "Repositório de testes para o aprendizado de Python"
authors = ["Raphael Coelho <raphael.phael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
pyodbc = "^5.1.0"
pyspark = "^3.5.1"
setuptools = "^69.1.1"
telegram = "^0.0.1"
imap-tools = "^1.5.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
